Added contact header and email link

--- a/projectsite/inc/nav.htm
+++ b/projectsite/inc/nav.htm
@@ -11,6 +11,8 @@
 		<li><a href=#>08 | methodology</a></li>
 		<li><a href=#>09 | jQuery / Git</a></li>
 	</ul>
+	<h3>contact</h3>
+	<a href="mailto:acalder1@my.bcit.ca">alistair calder</a>
 	<aside>
 	<h3>associated</h3>
 	<ul>
